# explicitag-py

./: LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
explicitag/: __main__.py  cli.py  data.py  explicitag.py  mp4.py
explicitag/data/: __init__.py  explicit_words.txt
src/: __main__.py  argparser.py  cli.py  mp4.py
src/data/: __init__.py
