[project]
name = "explicitag"
version = "1.1.3"
description = "An MP4 rating tagger based on lyrics."
authors = [{ name = "frosty", email = "inthishouseofcards@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click>=8.1.7", "mutagen>=1.47.0"]

[project.scripts]
explicitag = "explicitag.__main__:cli"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warning
    "I",   # isort
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
fixable = ["ALL"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
